--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,15 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-@@include('html/components/head.html',{ "title":"Барбершоп" })
+ <html lang="en" dir="ltr">
+@@include('html/components/head.html',{ "title":"Asia Union Airlines" })
 
 <body>
     @@include('html/components/header.html')
 
     <main class="main">
         @@include('html/sections/intro.html')
-        @@include('html/sections/features.html')
-        @@include('html/sections/price.html')
-        @@include('html/sections/about.html')
-        @@include('html/sections/master.html')
-        @@include('html/sections/product.html')
-        @@include('html/sections/spa.html')
-        @@include('html/sections/friends.html')
-        @@include('html/sections/action.html')
     </main>
-    @@include('html/components/main-background.html')       
 
-    @@include('html/components/footer.html')
+
+    <!-- @@include('html/components/footer.html') -->
 </body>
 
 <script src="./js/app.min.js"></script>
