add header intro plane feature comfort sections

--- a/src/html/sections/intro.html
+++ b/src/html/sections/intro.html
@@ -1,5 +1,44 @@
 <section class="intro">
   <div class="intro__bg">
-    <img src="./img/intro/bg.jpg" alt="">
+    <img src="./img/intro/bg.jpg" alt="" />
+  </div>
+  <div class="intro__inner container">
+    <div class="intro__title">Uniting the future</div>
+    <div class="intro__block">
+      <div class="intro__block-left">
+        <p class="intro__block-heading">ASIA UNION AIRLINES <span>АВИАКОМПАНИЯ КОТОРОЙ ВЫ МОЖЕТЕ ДОВЕРЯТЬ</span></p>
+        <p class="intro__block-text">Lorem ipsum dolor sit amet consectetur. Suspendisse lorem aenean a sed nibh.</p>
+        <div class="intro__block-bottom">
+          <div class="intro__block-navigation">
+            <div class="intro__block-navigation-prev swiper-button-prev">
+              @@include('../shared/navigationArrow.html')
+            </div>
+            <div class="intro__block-navigation-next swiper-button-next">
+              @@include('../shared/navigationArrow.html')
+            </div>
+          </div>
+          <button class="intro__block-button">Подробнее</button>
+        </div>
+      </div>
+      <div class="intro__block-right">
+        @@include('../shared/mask.html')
+        <div class="intro__block-swiper swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="./img/intro/img.jpg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./img/intro/img.jpg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./img/intro/img.jpg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./img/intro/img.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
