--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,18 @@
- <html lang="en" dir="ltr">
-@@include('html/components/head.html',{ "title":"Asia Union Airlines" })
+<html lang="en" dir="ltr">
+  @@include('html/components/head.html',{ "title":"Asia Union Airlines" })
 
-<body>
+  <body>
     @@include('html/components/header.html')
 
     <main class="main">
-        @@include('html/sections/intro.html')
+      @@include('html/sections/intro.html')
+      @@include('html/sections/plane.html')
+      @@include('html/sections/feature.html')
+      @@include('html/sections/comfort.html')
     </main>
 
-
     <!-- @@include('html/components/footer.html') -->
-</body>
+  </body>
 
-<script src="./js/app.min.js"></script>
-
+  <script src="./js/app.min.js"></script>
 </html>
