complete main page

--- a/src/html/sections/plane.html
+++ b/src/html/sections/plane.html
@@ -1,4 +1,16 @@
 <section class="plane">
+  <div class="plane__cloud">
+    <img src="./img/cloud.png" alt="">
+  </div>
+  <div class="cloud-top">
+    <img src="./img/cloud-anim.png" alt="">
+  </div>
+  <div class="cloud-bot">
+    <img src="./img/cloud-anim.png" alt="">
+  </div>
+  <!-- <div class="plane__cloud-anim">
+    <img src="./img/cloud-anim.png" alt="">
+  </div> -->
   <div class="plane__top">
     <div class="plane__sticky">
       <div class="plane__img">
