--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
       @@include('html/sections/plane.html')
       @@include('html/sections/feature.html')
       @@include('html/sections/comfort.html')
+      @@include('html/sections/info.html')
     </main>
 
-    <!-- @@include('html/components/footer.html') -->
+    @@include('html/components/footer.html')
   </body>
 
   <script src="./js/app.min.js"></script>
