--- a/src/fleet-inner.html
+++ b/src/fleet-inner.html
@@ -6,6 +6,7 @@
 
     <main class="main" id="fleet-inner">
       @@include('html/pages/fleet-inner/plane.html')
+      @@include('html/pages/fleet-inner/info.html')
       @@include('html/components/mainFlot.html')
     </main>
 
