--- a/src/html/pages/fleet-inner/plane.html
+++ b/src/html/pages/fleet-inner/plane.html
@@ -1,6 +1,6 @@
 <section class="plane">
   <div class="plane__inner container">
-    <div class="router">
+    <div class="router white">
       <a href="./">Главная</a>
       <span>>></span>
       <a href="./about.html">О компании</a>
@@ -9,12 +9,15 @@
       <span>>></span>
       <p>A330</p>
     </div>
-    <div class="plane__heading">A330</div>
+    <h3 class="plane__heading">A330</h3>
   </div>
   <div class="plane__bg">
     <img src="./img/fleet-inner/bg.jpg" alt="" />
   </div>
   <div class="plane__cloud">
     <img src="./img/fleet-inner/cloud-bg.png" alt="" />
+  </div>
+  <div class="plane__img">
+    <img src="./img/fleet-inner/big-plane.png" alt="" />
   </div>
 </section>
