--- a/src/bagagge-inner.html
+++ b/src/bagagge-inner.html
@@ -1,21 +1,21 @@
 <html lang="en" dir="ltr">
   @@include('html/components/head.html',{ "title":"Asia Union Airlines" })
 
-  <body>
+  <body data-page="bagagge-inner">
     @@include('html/components/header.html',{ 'color':'white' })
 
     <main class="main" id="bagagge-inner">
-      <section class="banner">
-        <div class="router container white">
-          <a href="./">Главная</a>
-          <span>>></span>
-          <a href="./service.html">Услуги</a>
-          <span>>></span>
-          <p>Багаж</p>
-        </div>
-        @@include('html/components/banner-content.html',{'img':'./img/banner/bagagge.jpg','title':'Перевозка багажа',
-        'text':'Путешествуя регулярными и чартерными рейсами Asia Union Airlines, Вы можете оформить дополнительное место багажа. '})
-      </section>
+      <div class="router container white">
+        <a href="./">Главная</a>
+        <span>>></span>
+        <a href="./service.html">Услуги</a>
+        <span>>></span>
+        <p>Багаж</p>
+      </div>
+      
+      @@include('html/components/banner.html',{'img':'./img/banner/bagagge.jpg','title':'Перевозка багажа',
+      'text':'Путешествуя регулярными и чартерными рейсами Asia Union Airlines, Вы можете оформить дополнительное место багажа. '})
+      
       @@include('html/pages/bagagge-inner/normal.html')
       @@include('html/pages/bagagge-inner/bagagge-type.html')
     </main>
