--- a/src/html/pages/service/bagagge.html
+++ b/src/html/pages/service/bagagge.html
@@ -1,17 +1,19 @@
 <section class="bagagge">
-  <div class="bagagge__inner container">
-    <h3 class="bagagge__title">Багаж</h3>
-    <p class="bagagge__text">
-      Sagittis auctor leo non vel pharetra tortor integer pretium malesuada. Vulputate tristique eget varius enim ut
-      egestas. Porttitor tempus nulla odio est consectetur arcu imperdiet orci. Morbi fermentum erat quam ullamcorper
-      gravida ornare id.
-    </p>
-    <p class="bagagge__text">
-      Vulputate tristique eget varius enim ut egestas. Porttitor tempus nulla odio est consectetur arcu imperdiet orci.
-      Morbi fermentum erat quam ullamcorper gravida ornare id.
-    </p>
-    <div class="bagagge__img">
-      <img src="./img/service/bagagge.png" alt="">
+  <div class="bagagge__inner">
+    <div class="bagagge__block container">
+      <h3 class="bagagge__title">Багаж</h3>
+      <p class="bagagge__text">
+        Sagittis auctor leo non vel pharetra tortor integer pretium malesuada. Vulputate tristique eget varius enim ut
+        egestas. Porttitor tempus nulla odio est consectetur arcu imperdiet orci. Morbi fermentum erat quam ullamcorper
+        gravida ornare id.
+      </p>
+      <p class="bagagge__text">
+        Vulputate tristique eget varius enim ut egestas. Porttitor tempus nulla odio est consectetur arcu imperdiet
+        orci. Morbi fermentum erat quam ullamcorper gravida ornare id.
+      </p>
+      <div class="bagagge__img">
+        <img src="./img/service/bagagge.png" alt="" />
+      </div>
     </div>
   </div>
 </section>
