--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html lang="en" dir="ltr">
   @@include('html/components/head.html',{ "title":"Asia Union Airlines" })
 
-  <body>
+  <body data-page="main">
     @@include('html/components/header.html',{ 'color':'' })
 
     <main class="main" id="main">
