add animation and hover sections , blocks

--- a/src/html/pages/about/passenger.html
+++ b/src/html/pages/about/passenger.html
@@ -13,7 +13,7 @@
       значительно превышающие отраслевые показатели гражданской авиации Узбекистана.
     </p>
     <div class="passenger__nums">
-      <span>120,532</span>
+      <span data-count="120532">120,532</span>
       <p>Пассажиров</p>
     </div>
     <div class="passenger__card">
