--- a/src/html/sections/feature.html
+++ b/src/html/sections/feature.html
@@ -20,12 +20,12 @@
             вашего путешествия. Добро пожаловать на рейсы AsianUnion Airlines. С уважением, команда AsianUnion Airlines.
           </p>
         </div>
-        <div class="feature__more">
+        <a class="feature__more">
           <p>Подробнее</p>
           <span>
             <img src="../../img/feature/more-arrow.svg" alt="" />
           </span>
-        </div>
+        </a>
       </div>
     </div>
   </div>
