--- a/src/html/pages/fleet-inner/info.html
+++ b/src/html/pages/fleet-inner/info.html
@@ -9,61 +9,67 @@
       Современный сбалансированный флот, состоящий из наиболее популярных моделей, позволяет сформировать оптимальное
       предложение для пассажиров вне зависимости от дальности направления перелета.
     </p>
-    @@include('../../components/button.html',{'text':'Характеристики','class':''})
-    @@include('../../components/button.html',{'text':'Самолет внутри','class':'active'})
+    @@include('../../components/button.html',{'text':'Характеристики','class':'active'})
+    @@include('../../components/button.html',{'text':'Самолет внутри','class':''})
   </div>
-  <div class="info__wrapper container" data-tab-content="char">
-    <div class="info__flex">
-      <p class="info__flex-item">Тип самолета:</p>
-      <p class="info__flex-item">Дальнемагистральный пассажирский самолет</p>
-    </div>
-    <div class="info__flex">
-      <p class="info__flex-item">Длина(М):</p>
-      <p class="info__flex-item">63,7</p>
-    </div>
-    <div class="info__flex">
-      <p class="info__flex-item">Размах крыла</p>
-      <p class="info__flex-item">60,9</p>
-    </div>
-    <div class="info__flex">
-      <p class="info__flex-item">Ширина кабины</p>
-      <p class="info__flex-item">5,87</p>
-    </div>
-    <div class="info__flex">
-      <p class="info__flex-item">Вместимость пассажиров(ч)</p>
-      <p class="info__flex-item">RA-A330, эконом- класс</p>
-    </div>
-    <div class="info__flex">
-      <p class="info__flex-item">Максимальная взлетная масса(кг)</p>
-      <p class="info__flex-item">247 198</p>
-    </div>
-    <div class="info__flex">
-      <p class="info__flex-item">Крейсерская скорость</p>
-      <p class="info__flex-item">905</p>
-    </div>
-    <div class="info__flex">
-      <p class="info__flex-item">Максимальная высота полета (м):</p>
-      <p class="info__flex-item">13 140</p>
-    </div>
-    <div class="info__flex">
-      <p class="info__flex-item">Максимальная дальнсть полета (м):</p>
-      <p class="info__flex-item">9 700</p>
-    </div>
-  </div>
-  <div class="info__wrapper active" data-tab-content="inside">
-    <div class="info__wrapper-img">
-      <img src="./img/fleet-inner/plane-front.png" alt="" />
-    </div>
-    <div class="info__wrapper-svg">@@include('../../shared/plane.html')</div>
-    <div class="info__wrapper-tooltip tooltip">
-      <div class="tooltip__img">
-        <img src="./img/fleet-inner/place-01.webp" alt="" class="active" />
-        <img src="./img/fleet-inner/place-02.jpg" alt="" />
+  <div class="info__tab">
+    <div class="info__wrapper container active" data-tab-content="char">
+      <div class="info__flex">
+        <p class="info__flex-item">Тип самолета:</p>
+        <p class="info__flex-item">Дальнемагистральный пассажирский самолет</p>
       </div>
-      <p class="tooltip__text">мест</p>
-      <div class="tooltip__num">
-        <span class="active">144</span>
-        <span>18</span>
+      <div class="info__flex">
+        <p class="info__flex-item">Длина(М):</p>
+        <p class="info__flex-item">63,7</p>
+      </div>
+      <div class="info__flex">
+        <p class="info__flex-item">Размах крыла</p>
+        <p class="info__flex-item">60,9</p>
+      </div>
+      <div class="info__flex">
+        <p class="info__flex-item">Ширина кабины</p>
+        <p class="info__flex-item">5,87</p>
+      </div>
+      <div class="info__flex">
+        <p class="info__flex-item">Вместимость пассажиров(ч)</p>
+        <p class="info__flex-item">RA-A330, эконом- класс</p>
+      </div>
+      <div class="info__flex">
+        <p class="info__flex-item">Максимальная взлетная масса(кг)</p>
+        <p class="info__flex-item">247 198</p>
+      </div>
+      <div class="info__flex">
+        <p class="info__flex-item">Крейсерская скорость</p>
+        <p class="info__flex-item">905</p>
+      </div>
+      <div class="info__flex">
+        <p class="info__flex-item">Максимальная высота полета (м):</p>
+        <p class="info__flex-item">13 140</p>
+      </div>
+      <div class="info__flex">
+        <p class="info__flex-item">Максимальная дальнсть полета (м):</p>
+        <p class="info__flex-item">9 700</p>
+      </div>
+    </div>
+    <div class="info__wrapper" data-tab-content="inside"></div>
+    <div class="info__ghost">
+      <div class="info__wrapper-img">
+        <img src="./img/fleet-inner/plane-front.png" alt="" />
+        <div class="info__wrapper-svg">@@include('../../shared/plane.html')</div>
+      </div>
+      <div class="info__wrapper-tooltip tooltip">
+        <div class="tooltip__wrap">
+          <div class="tooltip__img">
+            <img src="./img/fleet-inner/place-01.webp" alt="" class="active" data-place-img="blue" />
+            <img src="./img/fleet-inner/place-02.jpg" alt="" data-place-img="red" />
+          </div>
+          <p class="tooltip__text">мест</p>
+          <div class="tooltip__num">
+            <span class="active" data-place-count="blue">144</span>
+            <span data-place-count="red">18</span>
+          </div>
+          @@include('../../shared/triangle.html')
+        </div>
       </div>
     </div>
   </div>
