add mobile adaptive

--- a/src/html/pages/about/flot.html
+++ b/src/html/pages/about/flot.html
@@ -29,10 +29,7 @@
         </a>
         <a class="flot__card-item" href="./fleet.html">
           @@include('../../shared/long-arrow.html')
-          <p class="flot__card-name">
-            Смотреть <br />
-            все
-          </p>
+          <p class="flot__card-name">Смотреть все</p>
         </a>
       </div>
     </div>
