--- a/src/html/pages/service/fly.html
+++ b/src/html/pages/service/fly.html
@@ -6,14 +6,14 @@
           <img src="./img/service/img.jpg" alt="" />
         </div>
         <h4 class="fly__heading">Летайте в атмосфере комфорта</h4>
-        <a class="fly__link">Выбрать тариф</a>
+        <a href="./tarif-inner.html" class="fly__link">Выбрать тариф</a>
       </div>
       <div class="fly__wrap">
         <div class="fly__img">
           <img src="./img/service/img2.jpg" alt="" />
         </div>
         <h4 class="fly__heading">Летайте вместе со своими питомцами</h4>
-        <a class="fly__link">Правила перевозки животных</a>
+        <a href="./animal.html" class="fly__link">Правила перевозки животных</a>
       </div>
     </div>
   </div>
