--- a/src/html/pages/vacancy-inner/vacancy-inner.html
+++ b/src/html/pages/vacancy-inner/vacancy-inner.html
@@ -35,10 +35,34 @@
             К резюме небходимо прикрепит фото в полный рост и фото лица крупным планом;
           </li>
         </ul>
-        <a class="vacancy__block-link">Читать подробнее</a>
+        <div class="vacancy__block-wrap">
+          <h4 class="vacancy__block-heading">Условия:</h4>
+          <ul class="vacancy__block-list">
+            <li class="vacancy__block-item">Трудоустройство согласно ТК РУз;</li>
+          </ul>
+          <h4 class="vacancy__block-heading">Ключевые навыки:</h4>
+          <ul class="vacancy__block-list">
+            <li class="vacancy__block-item">Знание иностанных языков;</li>
+            <li class="vacancy__block-item">Навыки обслуживания людей, умение проявлять тактичность и толерантнсть;</li>
+            <li class="vacancy__block-item">Введение документации;</li>
+            <li class="vacancy__block-item">Ответсвенность и пунктуальность;</li>
+            <li class="vacancy__block-item">Работа в условиях многозадачгости;</li>
+            <li class="vacancy__block-item">Высокая энергичность и иннициативность;</li>
+            <li class="vacancy__block-item">Желание учиться и развиваться;</li>
+            <li class="vacancy__block-item">Терпеливость;</li>
+          </ul>
+          <a href="./resume.html" class="vacancy__block-link">Откликнуться</a>
+          <!-- @@include('../../components/button.html',{'text':'Откликнуться','class':'active'}) -->
+        </div>
+        <button class="vacancy__block-btn">
+          <span class="active">Читать подробнее</span>
+          <span>Скрыть</span>
+        </button>
       </div>
       <div class="vacancy__block-right">
-        <img src="./img/vacancy/girl.jpg" alt="" />
+        <div class="vacancy__block-img">
+          <img src="./img/vacancy/girl.jpg" alt="" />
+        </div>
       </div>
     </div>
   </div>
