--- a/src/html/sections/comfort.html
+++ b/src/html/sections/comfort.html
@@ -1,4 +1,4 @@
-<section class="comfort">
+<section class="comfort cloud">
   <div class="comfort__inner">
     <div class="comfort__block container">
       <div class="comfort__left">
