--- a/src/html/sections/info.html
+++ b/src/html/sections/info.html
@@ -6,18 +6,21 @@
       </div>
       <div class="info__right">
         <div class="info__right-card">
+          <a href="./service.html" class="info__right-link"></a>
           <div class="info__right-icon">
             <img src="./img/info/service.svg" alt="" />
           </div>
           <p class="info__right-text">Услуги</p>
         </div>
         <div class="info__right-card">
+          <a href="./food.html" class="info__right-link"></a>
           <div class="info__right-icon">
             <img src="./img/info/fork.svg" alt="" />
           </div>
           <p class="info__right-text">Питание</p>
         </div>
         <div class="info__right-card">
+          <a href="#!" class="info__right-link"></a>
           <div class="info__right-icon">
             <img src="./img/info/location.svg" alt="" />
           </div>
@@ -25,8 +28,5 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="info__cloud">
-    <img src="./img/cloud-two.png" alt="" />
   </div>
 </section>
