--- a/src/html/sections/intro.html
+++ b/src/html/sections/intro.html
@@ -1,4 +1,4 @@
-<section class="intro">
+<section class="intro cloud">
   <div class="intro__bg">
     <img src="./img/intro/bg.jpg" alt="" />
   </div>
