--- a/src/html/sections/plane.html
+++ b/src/html/sections/plane.html
@@ -1,16 +1,5 @@
-<section class="plane">
-  <div class="plane__cloud">
-    <img src="./img/cloud.png" alt="">
-  </div>
-  <div class="cloud-top">
-    <img src="./img/cloud-anim.png" alt="">
-  </div>
-  <div class="cloud-bot">
-    <img src="./img/cloud-anim.png" alt="">
-  </div>
-  <!-- <div class="plane__cloud-anim">
-    <img src="./img/cloud-anim.png" alt="">
-  </div> -->
+<section class="plane cloud-bot">
+  <div class="plane__cloud cloud"></div>
   <div class="plane__top">
     <div class="plane__sticky">
       <div class="plane__img">
@@ -18,7 +7,7 @@
       </div>
     </div>
   </div>
-  <div class="plane__inner container">
+  <div class="plane__inner cloud-bot">
     <h2 class="plane__title">Больше чем авиация</h2>
     <div class="plane__card">
       <div class="plane__card-item">
@@ -75,5 +64,6 @@
         </p>
       </div>
     </div>
+    <div class="plane__inner-cloud cloud"></div>
   </div>
 </section>
