--- a/src/html/pages/fleet-inner/info.html
+++ b/src/html/pages/fleet-inner/info.html
@@ -51,7 +51,11 @@
         <p class="info__flex-item">9 700</p>
       </div>
     </div>
-    <div class="info__wrapper" data-tab-content="inside"></div>
+    <div class="info__wrapper" data-tab-content="inside">
+      <div class="info__wrapper-img">
+        <img src="./img/fleet-inner/plane-front.png" alt="" />
+      </div>
+    </div>
     <div class="info__ghost">
       <div class="info__wrapper-img">
         <img src="./img/fleet-inner/plane-front.png" alt="" />
@@ -68,7 +72,6 @@
             <span class="active" data-place-count="blue">144</span>
             <span data-place-count="red">18</span>
           </div>
-          @@include('../../shared/triangle.html')
         </div>
       </div>
     </div>
