--- a/src/html/sections/feature.html
+++ b/src/html/sections/feature.html
@@ -1,4 +1,4 @@
-<section class="feature">
+<section class="feature cloud-bot">
   <div class="feature__inner container">
     <div class="feature__block">
       <div class="feature__left">
