add burger menu

--- a/src/html/sections/comfort.html
+++ b/src/html/sections/comfort.html
@@ -1,4 +1,5 @@
-<section class="comfort cloud">
+<section class="comfort">
+  <div class="comfort__cloud cloud"></div>
   <div class="comfort__inner">
     <div class="comfort__block container">
       <div class="comfort__left">
