--- a/src/html/sections/intro.html
+++ b/src/html/sections/intro.html
@@ -1,4 +1,4 @@
-<section class="intro cloud">
+<section class="intro">
   <div class="intro__bg">
     <img src="./img/intro/bg.jpg" alt="" />
   </div>
@@ -41,4 +41,5 @@
       </div>
     </div>
   </div>
+  <div class="intro__cloud cloud"></div>
 </section>
